2.3.0/_sources/api/nexusLIMS/nexusLIMS.config.md.txt
# {py:mod}`nexusLIMS.config`

```{py:module} nexusLIMS.config
```

```{autodoc2-docstring} nexusLIMS.config
:parser: autodoc2_docstrings_parser
:allowtitles:
```

## Module Contents

### Classes

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`NemoHarvesterConfig <nexusLIMS.config.NemoHarvesterConfig>`
  - ```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
* - {py:obj}`EmailConfig <nexusLIMS.config.EmailConfig>`
  - ```{autodoc2-docstring} nexusLIMS.config.EmailConfig
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
* - {py:obj}`Settings <nexusLIMS.config.Settings>`
  - ```{autodoc2-docstring} nexusLIMS.config.Settings
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
````

### Functions

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`refresh_settings <nexusLIMS.config.refresh_settings>`
  - ```{autodoc2-docstring} nexusLIMS.config.refresh_settings
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
* - {py:obj}`clear_settings <nexusLIMS.config.clear_settings>`
  - ```{autodoc2-docstring} nexusLIMS.config.clear_settings
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
````

### Data

````{list-table}
:class: autosummary longtable
:align: left

* - {py:obj}`TEST_MODE <nexusLIMS.config.TEST_MODE>`
  - ```{autodoc2-docstring} nexusLIMS.config.TEST_MODE
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
* - {py:obj}`settings <nexusLIMS.config.settings>`
  - ```{autodoc2-docstring} nexusLIMS.config.settings
    :parser: autodoc2_docstrings_parser
    :summary:
    ```
````

### API

````{py:data} TEST_MODE
:canonical: nexusLIMS.config.TEST_MODE

```{autodoc2-docstring} nexusLIMS.config.TEST_MODE
:parser: autodoc2_docstrings_parser
```

````

`````{py:class} NemoHarvesterConfig(/, **data: typing.Any)
:canonical: nexusLIMS.config.NemoHarvesterConfig

Bases: {py:obj}`pydantic.BaseModel`

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig
:parser: autodoc2_docstrings_parser
```

````{py:attribute} address
:canonical: nexusLIMS.config.NemoHarvesterConfig.address

**Type:** nexusLIMS.config.TestAwareHttpUrl

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig.address
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} token
:canonical: nexusLIMS.config.NemoHarvesterConfig.token

**Type:** str

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig.token
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} strftime_fmt
:canonical: nexusLIMS.config.NemoHarvesterConfig.strftime_fmt

**Type:** str

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig.strftime_fmt
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} strptime_fmt
:canonical: nexusLIMS.config.NemoHarvesterConfig.strptime_fmt

**Type:** str

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig.strptime_fmt
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} tz
:canonical: nexusLIMS.config.NemoHarvesterConfig.tz

**Type:** str | None

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig.tz
:parser: autodoc2_docstrings_parser
```

````

````{py:method} validate_trailing_slash(v: str | pydantic.AnyHttpUrl) -> str | pydantic.AnyHttpUrl
:canonical: nexusLIMS.config.NemoHarvesterConfig.validate_trailing_slash
:classmethod:

```{autodoc2-docstring} nexusLIMS.config.NemoHarvesterConfig.validate_trailing_slash
:parser: autodoc2_docstrings_parser
```

````

`````

`````{py:class} EmailConfig(/, **data: typing.Any)
:canonical: nexusLIMS.config.EmailConfig

Bases: {py:obj}`pydantic.BaseModel`

```{autodoc2-docstring} nexusLIMS.config.EmailConfig
:parser: autodoc2_docstrings_parser
```

````{py:attribute} smtp_host
:canonical: nexusLIMS.config.EmailConfig.smtp_host

**Type:** str

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.smtp_host
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} smtp_port
:canonical: nexusLIMS.config.EmailConfig.smtp_port

**Type:** int

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.smtp_port
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} smtp_username
:canonical: nexusLIMS.config.EmailConfig.smtp_username

**Type:** str | None

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.smtp_username
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} smtp_password
:canonical: nexusLIMS.config.EmailConfig.smtp_password

**Type:** str | None

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.smtp_password
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} use_tls
:canonical: nexusLIMS.config.EmailConfig.use_tls

**Type:** bool

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.use_tls
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} sender
:canonical: nexusLIMS.config.EmailConfig.sender

**Type:** nexusLIMS.config.TestAwareEmailStr

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.sender
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} recipients
:canonical: nexusLIMS.config.EmailConfig.recipients

**Type:** list[nexusLIMS.config.TestAwareEmailStr]

```{autodoc2-docstring} nexusLIMS.config.EmailConfig.recipients
:parser: autodoc2_docstrings_parser
```

````

`````

`````{py:class} Settings(_case_sensitive: bool | None = None, _nested_model_default_partial_update: bool | None = None, _env_prefix: str | None = None, _env_file: pydantic_settings.sources.DotenvType | None = ENV_FILE_SENTINEL, _env_file_encoding: str | None = None, _env_ignore_empty: bool | None = None, _env_nested_delimiter: str | None = None, _env_nested_max_split: int | None = None, _env_parse_none_str: str | None = None, _env_parse_enums: bool | None = None, _cli_prog_name: str | None = None, _cli_parse_args: bool | list[str] | tuple[str, ...] | None = None, _cli_settings_source: pydantic_settings.sources.CliSettingsSource[typing.Any] | None = None, _cli_parse_none_str: str | None = None, _cli_hide_none_type: bool | None = None, _cli_avoid_json: bool | None = None, _cli_enforce_required: bool | None = None, _cli_use_class_docs_for_groups: bool | None = None, _cli_exit_on_error: bool | None = None, _cli_prefix: str | None = None, _cli_flag_prefix_char: str | None = None, _cli_implicit_flags: bool | None = None, _cli_ignore_unknown_args: bool | None = None, _cli_kebab_case: bool | typing.Literal[all, no_enums] | None = None, _cli_shortcuts: collections.abc.Mapping[str, str | list[str]] | None = None, _secrets_dir: pydantic_settings.sources.PathType | None = None, **values: typing.Any)
:canonical: nexusLIMS.config.Settings

Bases: {py:obj}`pydantic_settings.BaseSettings`

```{autodoc2-docstring} nexusLIMS.config.Settings
:parser: autodoc2_docstrings_parser
```

````{py:attribute} model_config
:canonical: nexusLIMS.config.Settings.model_config
:value: >
   'SettingsConfigDict(...)'

```{autodoc2-docstring} nexusLIMS.config.Settings.model_config
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_FILE_STRATEGY
:canonical: nexusLIMS.config.Settings.NX_FILE_STRATEGY

**Type:** typing.Literal[exclusive, inclusive]

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_FILE_STRATEGY
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_IGNORE_PATTERNS
:canonical: nexusLIMS.config.Settings.NX_IGNORE_PATTERNS

**Type:** list[str]

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_IGNORE_PATTERNS
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_INSTRUMENT_DATA_PATH
:canonical: nexusLIMS.config.Settings.NX_INSTRUMENT_DATA_PATH

**Type:** nexusLIMS.config.TestAwareDirectoryPath

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_INSTRUMENT_DATA_PATH
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_DATA_PATH
:canonical: nexusLIMS.config.Settings.NX_DATA_PATH

**Type:** nexusLIMS.config.TestAwareDirectoryPath

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_DATA_PATH
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_DB_PATH
:canonical: nexusLIMS.config.Settings.NX_DB_PATH

**Type:** nexusLIMS.config.TestAwareFilePath

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_DB_PATH
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_CDCS_TOKEN
:canonical: nexusLIMS.config.Settings.NX_CDCS_TOKEN

**Type:** str

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_CDCS_TOKEN
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_CDCS_URL
:canonical: nexusLIMS.config.Settings.NX_CDCS_URL

**Type:** nexusLIMS.config.TestAwareHttpUrl

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_CDCS_URL
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_CERT_BUNDLE_FILE
:canonical: nexusLIMS.config.Settings.NX_CERT_BUNDLE_FILE

**Type:** nexusLIMS.config.TestAwareFilePath | None

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_CERT_BUNDLE_FILE
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_CERT_BUNDLE
:canonical: nexusLIMS.config.Settings.NX_CERT_BUNDLE

**Type:** str | None

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_CERT_BUNDLE
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_FILE_DELAY_DAYS
:canonical: nexusLIMS.config.Settings.NX_FILE_DELAY_DAYS

**Type:** float

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_FILE_DELAY_DAYS
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_CLUSTERING_SENSITIVITY
:canonical: nexusLIMS.config.Settings.NX_CLUSTERING_SENSITIVITY

**Type:** float

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_CLUSTERING_SENSITIVITY
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_LOG_PATH
:canonical: nexusLIMS.config.Settings.NX_LOG_PATH

**Type:** nexusLIMS.config.TestAwareDirectoryPath | None

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_LOG_PATH
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_RECORDS_PATH
:canonical: nexusLIMS.config.Settings.NX_RECORDS_PATH

**Type:** nexusLIMS.config.TestAwareDirectoryPath | None

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_RECORDS_PATH
:parser: autodoc2_docstrings_parser
```

````

````{py:attribute} NX_LOCAL_PROFILES_PATH
:canonical: nexusLIMS.config.Settings.NX_LOCAL_PROFILES_PATH

**Type:** nexusLIMS.config.TestAwareDirectoryPath | None

```{autodoc2-docstring} nexusLIMS.config.Settings.NX_LOCAL_PROFILES_PATH
:parser: autodoc2_docstrings_parser
```

````

````{py:property} nexuslims_instrument_data_path
:canonical: nexusLIMS.config.Settings.nexuslims_instrument_data_path
:type: pathlib.Path

```{autodoc2-docstring} nexusLIMS.config.Settings.nexuslims_instrument_data_path
:parser: autodoc2_docstrings_parser
```

````

````{py:property} lock_file_path
:canonical: nexusLIMS.config.Settings.lock_file_path
:type: pathlib.Path

```{autodoc2-docstring} nexusLIMS.config.Settings.lock_file_path
:parser: autodoc2_docstrings_parser
```

````

````{py:property} log_dir_path
:canonical: nexusLIMS.config.Settings.log_dir_path
:type: pathlib.Path

```{autodoc2-docstring} nexusLIMS.config.Settings.log_dir_path
:parser: autodoc2_docstrings_parser
```

````

````{py:property} records_dir_path
:canonical: nexusLIMS.config.Settings.records_dir_path
:type: pathlib.Path

```{autodoc2-docstring} nexusLIMS.config.Settings.records_dir_path
:parser: autodoc2_docstrings_parser
```

````

````{py:method} nemo_harvesters() -> dict[int, nexusLIMS.config.NemoHarvesterConfig]
:canonical: nexusLIMS.config.Settings.nemo_harvesters

```{autodoc2-docstring} nexusLIMS.config.Settings.nemo_harvesters
:parser: autodoc2_docstrings_parser
```

````

````{py:method} email_config() -> nexusLIMS.config.EmailConfig | None
:canonical: nexusLIMS.config.Settings.email_config

```{autodoc2-docstring} nexusLIMS.config.Settings.email_config
:parser: autodoc2_docstrings_parser
```

````

`````

````{py:function} refresh_settings() -> nexusLIMS.config.Settings
:canonical: nexusLIMS.config.refresh_settings

```{autodoc2-docstring} nexusLIMS.config.refresh_settings
:parser: autodoc2_docstrings_parser
```
````

````{py:function} clear_settings() -> None
:canonical: nexusLIMS.config.clear_settings

```{autodoc2-docstring} nexusLIMS.config.clear_settings
:parser: autodoc2_docstrings_parser
```
````

````{py:data} settings
:canonical: nexusLIMS.config.settings
:value: >
   '_SettingsProxy(...)'

```{autodoc2-docstring} nexusLIMS.config.settings
:parser: autodoc2_docstrings_parser
```

````
